Mon Nov  7 22:11:11 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added rudimentary Tripp Lite support, still incomplete
   and unstable.
 - newhidups: changed some local declarations to "static". 

Sun Nov 06 20:14:10 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - the state socket, used for the communication between the drivers
   and upsd, are now named using the upsname, as defined between brackets
   in ups.conf, by default. The same applies to drivers .pid file, now
   named using drivername-upsname. The old naming behavior is kept for
   debug purpose, allowing to start drivers only by specifying a port name.

Mon Oct 24 09:07:04 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - megatec: add this driver, which is the renamed powermust driver made
   more generic. This one now replaces powermust, and will replace mustek
   and blazer (and possibly fentonups, ippon, masterguard and sms)

   (Carlos Rodrigues)

 - add Maxxtro UPS 600 VA support, through the serial port, with the
   new megatec driver (from Flavio Grossi)

Sun Oct 23 05:24:25 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added support for CyberPower 685AVR, based on HID Usage
   Tree posted by Scott Alfter. This is very similar to APC, so
   combined APC and CyberPower into a single subdriver.

Fri Oct 21 17:42:28 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added missing "usage" definitions from HID Power
   Device specification, corrected spellings.

Fri Oct 21 03:38:17 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: enforce using "-x vendorid" together with "-x generic". 
 - newhidups: added new info to man page and docs/hid-subdrivers.txt

Fri Oct 21 03:03:44 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added "-x generic" option to allow connecting to an
   unsupported UPS. This should be used together with the "-x