@@ -79,7 +79,7 @@ al175.o: al175.c main.h ../include/common.h ../include/attribute.h \
   ../include/version.h ../include/upsconf.h dstate.h \
   ../include/parseconf.h ../include/upshandler.h ../include/extstate.h \
   serial.h al175.h
-apc-hid.o: apc-hid.c newhidups.h ../include/config.h libusb.h libhid.h \
+apc-hid.o: apc-hid.c newhidups.h ../include/config.h libhid.h \
   ../include/timehead.h hidtypes.h apc-hid.h ../include/extstate.h \
   dstate.h ../include/attribute.h ../include/parseconf.h \
   ../include/upshandler.h ../include/common.h ../include/attribute.h \
@@ -112,12 +112,12 @@ belkin.o: belkin.c main.h ../include/common.h ../include/attribute.h \
   ../include/version.h ../include/upsconf.h dstate.h \
   ../include/parseconf.h ../include/upshandler.h ../include/extstate.h \
   serial.h belkin.h ../include/timehead.h
-belkin-hid.o: belkin-hid.c newhidups.h ../include/config.h libusb.h \
-  libhid.h ../include/timehead.h hidtypes.h belkin-hid.h \
-  ../include/extstate.h dstate.h ../include/attribute.h \
-  ../include/parseconf.h ../include/upshandler.h ../include/common.h \
-  ../include/attribute.h ../include/config.h ../include/proto.h \
-  ../include/attribute.h ../include/version.h
+belkin-hid.o: belkin-hid.c newhidups.h ../include/config.h libhid.h \
+  ../include/timehead.h hidtypes.h belkin-hid.h ../include/extstate.h \
+  dstate.h ../include/attribute.h ../include/parseconf.h \
+  ../include/upshandler.h ../include/common.h ../include/attribute.h \
+  ../include/config.h ../include/proto.h ../include/attribute.h \
+  ../include/version.h
 belkinunv.o: belkinunv.c main.h ../include/common.h \
   ../include/attribute.h ../include/config.h ../include/proto.h \
   ../include/attribute.h ../include/version.h ../include/upsconf.h \
@@ -192,12 +192,12 @@ gamatronic.o: gamatronic.c main.h ../include/common.h \
   ../include/attribute.h ../include/version.h ../include/upsconf.h \
   dstate.h ../include/parseconf.h ../include/upshandler.h \
   ../include/extstate.h serial.h gamatronic.h
-generic-hid.o: generic-hid.c newhidups.h ../include/config.h libusb.h \
-  libhid.h ../include/timehead.h hidtypes.h generic-hid.h \
-  ../include/extstate.h dstate.h ../include/attribute.h \
-  ../include/parseconf.h ../include/upshandler.h ../include/common.h \
-  ../include/attribute.h ../include/config.h ../include/proto.h \
-  ../include/attribute.h ../include/version.h main.h ../include/upsconf.h
+generic-hid.o: generic-hid.c newhidups.h ../include/config.h libhid.h \
+  ../include/timehead.h hidtypes.h generic-hid.h ../include/extstate.h \
+  dstate.h ../include/attribute.h ../include/parseconf.h \
+  ../include/upshandler.h ../include/common.h ../include/attribute.h \
+  ../include/config.h ../include/proto.h ../include/attribute.h \
+  ../include/version.h main.h ../include/upsconf.h
 genericups.o: genericups.c main.h ../include/common.h \
   ../include/attribute.h ../include/config.h ../include/proto.h \
   ../include/attribute.h ../include/version.h ../include/upsconf.h \
@@ -250,7 +250,7 @@ metasys.o: metasys.c main.h ../include/common.h ../include/attribute.h \
   ../include/version.h ../include/upsconf.h dstate.h \
   ../include/parseconf.h ../include/upshandler.h ../include/extstate.h \
   serial.h metasys.h
-mge-hid.o: mge-hid.c newhidups.h ../include/config.h libusb.h libhid.h \
+mge-hid.o: mge-hid.c newhidups.h ../include/config.h libhid.h \
   ../include/timehead.h hidtypes.h mge-hid.h ../include/extstate.h \
   dstate.h ../include/attribute.h ../include/parseconf.h \
   ../include/upshandler.h ../include/common.h ../include/attribute.h \
@@ -277,7 +277,7 @@ newhidups.o: newhidups.c main.h ../include/common.h \
   ../include/attribute.h ../include/version.h ../include/upsconf.h \
   dstate.h ../include/parseconf.h ../include/upshandler.h \
   ../include/extstate.h libhid.h ../include/timehead.h hidtypes.h \
-  newhidups.h libusb.h generic-hid.h mge-hid.h apc-hid.h belkin-hid.h
+  libusb.h newhidups.h generic-hid.h mge-hid.h apc-hid.h belkin-hid.h
 nitram.o: nitram.c main.h ../include/common.h ../include/attribute.h \
   ../include/config.h ../include/proto.h ../include/attribute.h \
   ../include/version.h ../include/upsconf.h dstate.h \
@@ -330,12 +330,12 @@ tripplite.o: tripplite.c main.h ../include/common.h \
   ../include/attribute.h ../include/version.h ../include/upsconf.h \
   dstate.h ../include/parseconf.h ../include/upshandler.h \
   ../include/extstate.h serial.h tripplite.h
-tripplite-hid.o: tripplite-hid.c newhidups.h ../include/config.h libusb.h \
-  libhid.h ../include/timehead.h hidtypes.h tripplite-hid.h \
-  ../include/extstate.h dstate.h ../include/attribute.h \
-  ../include/parseconf.h ../include/upshandler.h ../include/common.h \
-  ../include/attribute.h ../include/config.h ../include/proto.h \
-  ../include/attribute.h ../include/version.h
+tripplite-hid.o: tripplite-hid.c newhidups.h ../include/config.h libhid.h \
+  ../include/timehead.h hidtypes.h tripplite-hid.h ../include/extstate.h \
+  dstate.h ../include/attribute.h ../include/parseconf.h \
+  ../include/upshandler.h ../include/common.h ../include/attribute.h \
+  ../include/config.h ../include/proto.h ../include/attribute.h \
+  ../include/version.h
 tripplitesu.o: tripplitesu.c main.h ../include/common.h \
   ../include/attribute.h ../include/config.h ../include/proto.h \
   ../include/attribute.h ../include/version.h ../include/upsconf.h \
